# RecHarness

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  design.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding_a_new_domain.md  agent_integration.md  agent_loop_contract.md  catalog_schema.md  domain_adapters.md  evaluation.md  http_server.md  mcp_client_demo.md  mcp_config.md  openai_agents.md  quickstart.md  recommendation_bundle.md  release_checklist.md  release_notes_v0.2-alpha.md  repair.md  schemas.md  tool_calling_agent_demo.md  verification.md
docs/plans/: v0.3-alpha.md
examples/: assist_demo.py  evaluation_demo.py  repair_dogfooding_notes.md  verify_demo.py
examples/agent_loops/: __init__.py  repair_loop_demo.py  verify_before_final_answer.py
examples/backpacks/: agent_outputs.jsonl  catalog.jsonl  dogfooding_tasks.jsonl  missions.jsonl
tests/: test_agent_contract.py  test_agent_loop_examples.py  test_agent_router.py  test_answer_repair.py  test_backpack_benchmark.py  test_catalog_config.py  test_claim_verifier.py  test_cli.py  test_constraint_verifier.py  test_domains.py  test_edge_case_fixtures.py  test_evaluation.py  test_examples.py  test_failures.py  test_harness.py  test_headphones_dogfood.py  test_headphones_domain.py  test_integration_demos.py  test_jsonl_catalog.py  test_mcp_server.py  test_ranker.py  test_repair_dogfood.py  test_retrieval.py  test_rule_parser.py  test_schemas.py  test_tool_adapter.py  test_tool_calling_agent_demo.py  test_tool_schemas.py  test_tracing.py  test_verify_mode.py
(+52 files in other folders)
